// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Decorative renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:ru:-panel"
    aria-expanded="false"
    aria-haspopup="true"
    class="css-1clbjuu-BaseButton-Button"
    id="dropdown-menu-:ru:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-9s3cfn-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:ru:-button"
    class="css-1xx9vug-boxStyles-boxStyles-Popover-DropdownMenuPanel"
    id="dropdown-menu-:ru:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; display: none; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:rv:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-qhpjst-Icon"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 19.1773C6.74319 17.9616 9.42279 17.0003 11.9999 17.0003C14.5769 17.0003 17.2567 17.9618 19.4999 19.1775M15.2053 9.95293C15.2036 10.4573 15.0723 10.9535 14.823 11.3977C14.5737 11.842 14.2141 12.2205 13.7759 12.5C13.3377 12.7794 12.8345 12.9511 12.3106 13C11.7867 13.0489 11.2584 12.9733 10.7722 12.7801C10.286 12.5869 9.85698 12.2819 9.52298 11.892C9.18899 11.5022 8.96036 11.0396 8.85721 10.545C8.75406 10.0504 8.7796 9.53905 8.93158 9.05615C9.08357 8.57326 9.35732 8.13367 9.72865 7.77621C10.1769 7.34467 10.7489 7.05056 11.372 6.93123C11.9951 6.81191 12.6412 6.87274 13.2281 7.10602C13.815 7.3393 14.3164 7.73449 14.6684 8.2414C15.0204 8.7483 15.2073 9.34403 15.2053 9.95293Z"
          />
          <circle
            cx="12"
            cy="12"
            r="10.5"
          />
        </svg>
        <span>
          Profile
        </span>
      </div>
    </div>
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:r10:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-qhpjst-Icon"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6M22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6M22 6L12 13L2 6"
          />
        </svg>
        <span>
          Messages
        </span>
      </div>
      <span
        aria-hidden="true"
        class="css-6zx2l8-boxStyles-Text-NotificationBadge"
      >
        99+
      </span>
      <span
        class="css-avudkd-VisuallyHidden"
      >
        , 100 unread
      </span>
    </div>
    <hr
      aria-hidden="true"
      class="css-1th2zfi-Divider"
    />
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:r11:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-qhpjst-Icon"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
          />
        </svg>
        <span>
          Account settings
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu Links renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r16:-panel"
    aria-expanded="false"
    aria-haspopup="true"
    class="css-1clbjuu-BaseButton-Button"
    id="dropdown-menu-:r16:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-9s3cfn-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r16:-button"
    class="css-1xx9vug-boxStyles-boxStyles-Popover-DropdownMenuPanel"
    id="dropdown-menu-:r16:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; display: none; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <a
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      href="/about"
      id="dropdown-menu-:r16:-item-:r17:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <span>
          About
        </span>
      </div>
    </a>
    <a
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      href="/contact"
      id="dropdown-menu-:r16:-item-:r18:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <span>
          Contact
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`DropdownMenu Radio Group renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r1i:-panel"
    aria-expanded="false"
    aria-haspopup="true"
    class="css-1clbjuu-BaseButton-Button"
    id="dropdown-menu-:r1i:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-9s3cfn-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r1i:-button"
    class="css-1xx9vug-boxStyles-boxStyles-Popover-DropdownMenuPanel"
    id="dropdown-menu-:r1i:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; display: none; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      aria-labelledby="dropdown-menu-:r1i:-group-:r1j:"
      role="group"
    >
      <span
        class="css-1m7g6l1-boxStyles-Text"
        id="dropdown-menu-:r1i:-group-:r1j:"
      >
        Businesses
      </span>
      <div
        aria-checked="false"
        class="css-awx55o-boxStyles-DropdownMenuItemRadio"
        id="item-1"
        role="menuitemradio"
      >
        <div
          class="css-120nxx4-boxStyles"
        >
          <span
            class="css-okwnh7-boxStyles-Text"
          >
            Antfix
          </span>
          <span
            class="css-1q2emlt-boxStyles-Text"
          >
            Sydney
          </span>
        </div>
      </div>
      <div
        aria-checked="true"
        class="css-sexxhi-boxStyles-DropdownMenuItemRadio"
        id="item-2"
        role="menuitemradio"
      >
        <div
          class="css-120nxx4-boxStyles"
        >
          <span
            class="css-1gsq1zi-boxStyles-Text"
          >
            Produce Fresh
          </span>
          <span
            class="css-1q2emlt-boxStyles-Text"
          >
            Brisbane
          </span>
        </div>
      </div>
      <div
        aria-checked="false"
        class="css-awx55o-boxStyles-DropdownMenuItemRadio"
        id="item-3"
        role="menuitemradio"
      >
        <div
          class="css-120nxx4-boxStyles"
        >
          <span
            class="css-okwnh7-boxStyles-Text"
          >
            Organic Co
          </span>
          <span
            class="css-1q2emlt-boxStyles-Text"
          >
            Canberra
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r0:-panel"
    aria-expanded="false"
    aria-haspopup="true"
    class="css-1clbjuu-BaseButton-Button"
    id="dropdown-menu-:r0:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-9s3cfn-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r0:-button"
    class="css-1xx9vug-boxStyles-boxStyles-Popover-DropdownMenuPanel"
    id="dropdown-menu-:r0:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; display: none; transform: translate(0px, 0px);"
    tabindex="-1"
  >
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r1:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <span>
          Item 1
        </span>
      </div>
    </div>
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r2:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <span>
          Item 2
        </span>
      </div>
    </div>
    <div
      class="css-1hww2s-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r3:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-t13s7n-boxStyles"
      >
        <span>
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;
